<!--
  ~ Copyright (C) 2022 Lukas Eisenhauer
  ~
  ~ This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or(at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">Music</string>
    <string name="play_tab">Play</string>
    <string name="song_tab">Song</string>
    <string name="instrument_tab">Instruments</string>
    <string name="credits_tab">Credits</string>
    <string name="credits">this app was created by Lukas Eisenhauer</string>
    <string name="play_button_description">start or stop the song</string>
    <string name="placeholder">placeholder text...</string>
    <string name="instrument_active">active</string>
    <string name="instrument_type_description">select the instrument waveform</string>
    <string name="edit_instrument_description">edit this instrument\'s properties</string>
    <string name="new_phrase_description">Add a new phrase</string>
    <string name="actual_chords">Actual chords</string>
    <string name="key_selection_description">select the song\'s key</string>
    <string name="edit_chord">Edit chord</string>
    <string name="chord_pitch_description">Edit this chord\'s pitch</string>
    <string name="chord_type_description">Edit this chord\'s type</string>
    <string name="chord_pitch">Chord pitch</string>
    <string name="chord_type">Chord type</string>
    <string name="exit">Exit this menu</string>
    <string name="advance_measure">Go to the next measure</string>
    <string name="reverse_measure">Go to the start of the current measure</string>
    <string name="advance_phrase">Go to the next phrase</string>
    <string name="reverse_phrase">Go to the start of the current phrase</string>
    <string name="unknown_chord">Next chord not known yet . . .</string>
    <string name="edit_instrument">Edit instrument</string>
    <string name="instrument_name">Instrument name:</string>
    <string name="close">close this menu</string>
    <string name="waveform">Waveform:</string>
    <string name="voice">Voice:</string>
    <string name="add_instrument">Add a new instrument</string>
    <string name="delete_instrument">Delete this instrument</string>
    <string name="edit_voice">Edit voice</string>
    <string name="edit_envelope">Edit envelope</string>
    <string name="edit_effects">Edit effects</string>
    <string name="restrike">restrike</string>
    <string name="restrike_description">restrike a note if it\'s already playing?</string>
</resources>