<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2022 Lukas Eisenhauer
  ~
  ~ This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or(at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.fragments.InstrumentFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/instrumentNameText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/placeholder"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/editInstrumentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:contentDescription="@string/edit_instrument_description"
            android:cropToPadding="true"
            android:keepScreenOn="true"
            android:src="@android:drawable/ic_menu_edit"
            app:backgroundTint="@color/material_dynamic_primary50"
            app:fabSize="mini"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instrumentNameText" />

        <Button
            android:id="@+id/muteButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:backgroundTint="@color/gray_0x60"
            android:text="M"
            app:layout_constraintBottom_toBottomOf="@+id/editInstrumentButton"
            app:layout_constraintStart_toEndOf="@+id/editInstrumentButton"
            app:layout_constraintTop_toTopOf="@+id/editInstrumentButton" />

        <Button
            android:id="@+id/soloButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:backgroundTint="@color/gray_0x60"
            android:text="S"
            app:layout_constraintBottom_toBottomOf="@+id/editInstrumentButton"
            app:layout_constraintStart_toEndOf="@+id/muteButton"
            app:layout_constraintTop_toTopOf="@+id/editInstrumentButton" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:clickable="true"
            android:contentDescription="@string/delete_instrument"
            android:src="@android:drawable/ic_menu_delete"
            app:backgroundTint="#C62828"
            app:fabSize="mini"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editInstrumentButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>